button enabled n disabled update

--- a/game/index.html
+++ b/game/index.html
@@ -58,8 +58,8 @@
     <div class="controls">
       <input type="number" name="number" id="number" placeholder="Enter Box Number">
       <div class="button-group">
-          <button type="submit" onclick="clickx()" disabled: ="true">X</button>
-          <button type="submit" onclick="click0()" disabled: ="true">0</button>
+          <button type="submit" onclick="clickx()" id="btn1">X</button>
+          <button type="submit" onclick="click0()" id="btn2">0</button>
       </div>
   </div>
   
