--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <a href="./18-02-25/index.html">star pattern task2</a>
     <br>
+
+    <a href="./game2/index.html">tic tac toe game2</a>
     
 </body>
 </html>
