--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
     <br>
 
     <a href="./game2/index.html">tic tac toe game2</a>
+    <br>
+
+    <a href="./21-02-25/index.html">Add</a>
+    <br>
+
+    <a href="./game3/index.html">tic tac toe game3</a>
+    <br>
+
+    <a href="./showResult/index.html">showResult</a>
+    <br>
+
+    <a href="./starPattern/index.html">star pattern A</a>
     
 </body>
 </html>
